--- a/hadoop2.x/roles/ssh/templates/ssh.sh.j2
+++ b/hadoop2.x/roles/ssh/templates/ssh.sh.j2
@@ -2,5 +2,5 @@
 {% for host in groups['hdp'] %}
 spawn ssh root@{{ hostvars[host].hdp_hostname }}
 expect "(yes/no)" { send "yes\r" }
-exit
+interact
 {% endfor %}
